Add route Add react view Update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,10 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+# Generated file
+public/bundle.js
+public/index.html
+
+# Upload file
+public/upload
