--- a/package.json
+++ b/package.json
@@ -5,16 +5,28 @@
   "main": "index.js",
   "scripts": {
     "start": "babel-node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack": "cd view && webpack",
+    "webpack-dev": "cd view && webpack-dev-server --content-base ../public"
   },
   "author": "chertpong_h <chertpong_h@cmu.ac.th>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.13.4"
+    "body-parser": "^1.15.0",
+    "express": "^4.13.4",
+    "multer": "^1.1.0",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.7.5",
+    "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-2": "^6.5.0"
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-2": "^6.5.0",
+    "html-webpack-plugin": "^2.15.0",
+    "raw-loader": "^0.5.1",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1"
   }
 }
