--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "express": "^4.13.4",
     "multer": "^1.1.0",
     "react": "^15.0.1",
-    "react-dom": "^15.0.1"
+    "react-dom": "^15.0.1",
+    "react-router": "^2.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.7.5",
+    "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
