--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "mongoose": "^4.4.12",
     "multer": "^1.1.0",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
